<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="800dp"
        android:background="#fff"
        android:src="@drawable/fotoku"
        tools:srcCompat="@drawable/fotoku" />

    <TextView
        android:id="@+id/nama"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="2in"
        android:text="@string/name" />
    <TextView
        android:id="@+id/nim"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/nim"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/nama"
        />
    <TextView
        android:id="@+id/dospem"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/doswal"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/nim"
        />
    <TextView
        android:id="@+id/phonenumber"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/dospem"
        />
    <TextView
        android:id="@+id/email"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/phonenumber"
        />

    <TextView
        android:id="@+id/addres"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/addres" />

    <TextView
        android:id="@+id/religion"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/addres"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/religion" />

    <TextView
        android:id="@+id/myname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/myname"
        android:layout_alignBaseline="@id/nama"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        />
    <TextView
        android:id="@+id/mynim"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/mynim"
        android:layout_alignBaseline="@id/nim"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:layout_below="@id/myname"
        />
    <TextView
        android:id="@+id/mydoswal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/mydoswal"
        android:layout_alignBaseline="@id/dospem"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:layout_below="@id/mynim"
        />

    <TextView
        android:id="@+id/phone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/mydoswal"
        android:layout_alignBaseline="@id/phonenumber"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:text="@string/myphone" />

    <TextView
        android:id="@+id/myemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_alignBaseline="@id/email"
        android:layout_alignParentRight="true"
        android:layout_marginTop="11dp"
        android:layout_marginRight="35dp"
        android:text="@string/myemail" />

    <TextView
        android:id="@+id/myemail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/myemail"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginRight="29dp"
        android:text="@string/myemail2" />

    <TextView
        android:id="@+id/myaddres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/myemail"
        android:layout_alignBaseline="@id/addres"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:layout_marginRight="59dp"
        android:text="@string/myaddres" />

    <TextView
        android:id="@+id/myaddres2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/myaddres"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:layout_marginRight="31dp"
        android:text="@string/myaddres2" />

    <TextView
        android:id="@+id/myreligion"
        android:contentDescription="fotoku"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/myaddres"
        android:layout_alignBaseline="@id/religion"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:text="@string/myreligion"
        />

</RelativeLayout>